# NumCSE

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md
common/cmake/: Common.cmake  MyBackward.cmake  MyMathGL2.cmake
series0/: CMakeLists.txt  factorial.cpp  fractal.cpp  plot.R  timer.cpp
